--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@
   border: 0.1rem solid rgba(0, 0, 0, 0.233);
   padding: 1rem;
   justify-content: space-between;
+  background-color: azure;
 }
 
 .List-header {
